examples/invalid/35_variant_without_parens.lane
module Examples.Invalid35

enum Option[T] {
  some(T)
  none()
}

let x : Option[Int] = some(1)

fn[T, R] map_option(val : Option[T], f : (T) -> R) -> Option[R] {
  match val {
    Option::some(v) => some(f(v))
    Option::none() => none
  }
}
